--- a/stylish/components/_nav.scss
+++ b/stylish/components/_nav.scss
@@ -6,42 +6,45 @@
 .nav,
 .navi{
   li{
-    list-style: none;
-    a{display: block;text-align: center;}
+    list-style: none;text-align: center;
+    a{display: block;}
+  }
+
+  //Navigation align
+  &.nav_aright li{ text-align: right}
+  &.nav_aleft  li{ text-align: left}
+
+
+  //Calculate navigation item width based on data-item attribute
+  $i:24;
+  @while $i > 0{
+    &[data-item="#{$i}"] li,
+    &[data-items="#{$i}"] li{ width:100%/$i; }
+    $i:$i - 1;
   }
   @extend .clearfix
 }
 
 
 //Navigation with float left
-.nav li{ float: left; }
+.nav{
+  li{ float: left; }
+  &.nav_right li{ float: right; }
+}
 
 
 //Navigation with display inline
-.navi li{ display:inline-block; vertical-align: middle; margin-right: -6px; }
+.navi li{ display:inline-block; vertical-align: middle ; margin-right: -6px; }
 
 
-//Calculate navigation item width based on data-item attribute
-$i:12;
-@while $i > 0{
-  .nav[data-item="#{$i}"] li{ width:100%/$i; }
-  $i:$i - 1;
-}
 
 
 //Sticky Navigation
 .sticky{
   position: fixed; z-index: 10000;
 
-  &.top,
-  &.bottom{ width: 100%; }
-
-  &.top{    left: 0; top: 0;}
-  &.bottom{ left: 0; bottom: 0;}
-
-
-  &.left,
-  &.right{ height: 100%; top: 0; }
+  &.top{    top: 0;}
+  &.bottom{ bottom: 0;}
 
   &.left{  left: 0; }
   &.right{ right: 0; }
