--- a/stylish/global/_buttons.scss
+++ b/stylish/global/_buttons.scss
@@ -7,9 +7,15 @@ button,
 input[type=submit],
 input[type=button],
 input[type=reset]{
-  margin: 0; font-size: 14px; padding: 10px 20px; line-height: 20px; text-transform: uppercase;border: 1px solid; text-align: center; width: 100%; display: block; text-decoration: none; cursor: pointer; font-family: $body_font_family;@include transition-property(all);@include transition-duration(.3s);@include border-radius(4px); @include btn_color(); @include appearance(none); @include font-smoothing();
+  margin: 0; font-size: $btn_txt_size; padding: $btn_padding; line-height: $btn_txt_size + 6; text-transform: uppercase;border: 1px solid; text-align: center; width: 100%; display: block; white-space: nowrap;  text-decoration: none; cursor: pointer; font-family: $body_font_family;@include transition-property(all);@include transition-duration(.3s);@include border-radius($global_radius); @include btn_color(); @include appearance(none); @include font-smoothing();
 
-  // set rounded buttons to strait
+  //Big size (cca 52px)
+  &.btn_big, &[data-size="big"]{ padding: $btn_padding*1.5 $btn_padding; font-size: $btn_txt_size + 6; }
+
+  //Small size (cca 32px)
+  &.btn_small, &[data-size="small"]{ padding: $btn_padding/2 $btn_padding;}
+
+  //Set rounded buttons to strait
   &.no_radius{@include border-radius(0);}
 
   //Full rounded buttons
@@ -20,6 +26,9 @@ input[type=reset]{
 
   //Set button to auto width
   &.auto_width{width: auto; display: inline-block;}
+
+  //Force btn not to break
+  &.no_word_break{ word-break: normal }
 
   //Icon in button
   &.btn_icon,
