--- a/stylish/global/_mixins.scss
+++ b/stylish/global/_mixins.scss
@@ -185,6 +185,10 @@
     &.btn_#{$name}{
       @include btn_color($color, $hover)
     }
+
+    &.btn_#{$name}_border{
+      @include btn_color(transparent, $color, $color, $color, $hover, $color)
+    }
   }
 }
 
@@ -231,7 +235,7 @@
 
 
 //Default input style
-@mixin input_style($color:$input_text, $bg:$input_bg, $txt_size: $p, $padding:$input_padding, $height: $input_height, $border_width: $input_border_width, $border_color: $input_border, $margin: 0, $width:100%, $radius:4px){
+@mixin input_style($color:$input_text, $bg:$input_bg, $txt_size: $p, $padding:$input_padding, $height: $input_height, $border_width: $input_border_width, $border_color: $input_border, $margin: 0, $width:100%, $radius: $global_radius){
   color:$color; background-color: $bg; font-size: $txt_size; padding: $padding; height: $height; border: $border_width solid $border_color; margin: $margin; width: $width; font-family:$body_font_family; @include border-radius($radius);@include appearance(none); @include font-smoothing();
 }
 
