--- a/stylish/components/_msg.scss
+++ b/stylish/components/_msg.scss
@@ -3,7 +3,6 @@
 
 
 .messages, .msg{
-  $icon_size:30px;
   margin-bottom: 30px; list-style: none;
 
   li{
@@ -12,8 +11,8 @@
   }
 
   > li{
-    color: $color_mine_shaft; padding:10px 10px 10px $icon_size+30px;@include border-radius($global_radius); position: relative; margin-bottom: 20px;
-    &:before{@extend .sy_icon;font-size: $icon_size; position: absolute; left: 15px; top: 50%; margin-top: -$icon_size/2;}
+    color: $color_mine_shaft; padding:10px 10px 10px $msg_icon_size+30px;@include border-radius($global_radius); position: relative; margin-bottom: 20px;
+    &:before{@extend .sy_icon;font-size: $msg_icon_size; position: absolute; left: 15px; top: 50%; margin-top: -$msg_icon_size/2;}
 
     //Error state
     &.error-msg,
