--- a/stylish/global/_variables.scss
+++ b/stylish/global/_variables.scss
@@ -160,6 +160,8 @@ $accordion_content_color:   $color_mercury; //accordion content bg color
 
 $tabs_head_color:           $color_mercury;  //tabs lines color
 
+$msg_icon_size:             30px; //Messages icon size
+
 $table_head_border:         $color_flush_mahogany;  //table head border bottom color
 $table_body_border:         $color_mercury; //table body border bottom color
 $table_footer_border:       $table_head_border; //table footer border bottom color
