--- a/stylish/layout/_sidebar.scss
+++ b/stylish/layout/_sidebar.scss
@@ -10,3 +10,35 @@
     .widget_content{}
   }
 }
+
+
+/* RESPONSIVE MEDIA QUERIES */
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
+
+
+//@media screen and ($responsive_first: $screen_large){
+//  @if $responsive == true{
+//
+//  }
+//}
+//
+//
+//@media screen and ($responsive_first: $screen_medium){
+//  @if $responsive == true{
+//
+//  }
+//}
+//
+//
+//@media screen and ($responsive_first: $screen_small){
+//  @if $responsive == true{
+//
+//  }
+//}
+//
+//
+//@media screen and ($responsive_first: $screen_xsmall){
+//  @if $responsive == true{
+//
+//  }
+//}
