--- a/stylish/layout/_content.scss
+++ b/stylish/layout/_content.scss
@@ -3,3 +3,35 @@
 
 
 #content{min-height: 500px; margin-bottom: 50px;}
+
+
+/* RESPONSIVE MEDIA QUERIES */
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
+
+
+//@media screen and ($responsive_first: $screen_large){
+//  @if $responsive == true{
+//
+//  }
+//}
+//
+//
+//@media screen and ($responsive_first: $screen_medium){
+//  @if $responsive == true{
+//
+//  }
+//}
+//
+//
+//@media screen and ($responsive_first: $screen_small){
+//  @if $responsive == true{
+//
+//  }
+//}
+//
+//
+//@media screen and ($responsive_first: $screen_xsmall){
+//  @if $responsive == true{
+//
+//  }
+//}
