--- a/stylish/layout/pages/_single.scss
+++ b/stylish/layout/pages/_single.scss
@@ -1,2 +1,35 @@
 /* SINGLE LAYOUT */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
+
+
+
+/* RESPONSIVE MEDIA QUERIES */
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
+
+
+//@media screen and ($responsive_first: $screen_large){
+//  @if $responsive == true{
+//
+//  }
+//}
+//
+//
+//@media screen and ($responsive_first: $screen_medium){
+//  @if $responsive == true{
+//
+//  }
+//}
+//
+//
+//@media screen and ($responsive_first: $screen_small){
+//  @if $responsive == true{
+//
+//  }
+//}
+//
+//
+//@media screen and ($responsive_first: $screen_xsmall){
+//  @if $responsive == true{
+//
+//  }
+//}
