--- a/stylish/style.scss
+++ b/stylish/style.scss
@@ -5,7 +5,7 @@ Description:
 Author: Mustra-designs (Ivan Ružević)
 Author URI: www.mustra-designs.com
 Help: stylish.mustra-designs.com
-Version: 3.1.1
+Version: 3.1.2
 */
 
 /* Compass Framework Import */
@@ -49,6 +49,7 @@ Version: 3.1.1
 @import "components/paginations";
 @import "components/table";
 @import "components/tabs";
+@import "components/tooltip";
 @import "components/fontawesome";
 
 
