--- a/stylish/components/_tooltip.scss
+++ b/stylish/components/_tooltip.scss
@@ -10,30 +10,46 @@
     .tip{ top: auto; left: auto; @include opacity(1); visibility: visible; }
   }
 
- .tip {
-    position: absolute; padding: 10px; text-align: center; background: $color_white; @include border-radius(4px); @include box-shadow(rgba($color_mine_shaft, 0.1) 1px 1px 2px 0px);z-index: -1; visibility: hidden; @include opacity(0);@include transition-duration(.4s); @include transition-property(opacity);
+  .tip {
+    position: absolute; padding: 10px; text-align: center; max-width: 300px; font-size: 14px; @include border-radius($global_radius); @include box-shadow(rgba($color_mine_shaft, 0.1) 1px 1px 2px 0px);z-index: -1; visibility: hidden; @include opacity(0);@include transition-duration(.4s); @include transition-property(opacity);
     &:after {
-      content: ""; position: absolute; width: 0; height: 0; border-width: $tooltip_arrow; border-style: solid;
+      content: ""; position: absolute; width: 0; height: 0; border: $tooltip_arrow solid transparent;
     }
-    &[data-position="top"]{
-      left:50%;
-      &:after{bottom:-$tooltip_arrow*2; left: 50%; margin-left: -$tooltip_arrow; border-color: $color_white transparent transparent transparent;}
-    }
+
+
+    //Position general
+    &[data-position="top"],
     &[data-position="bottom"]{
       left:50%;
-      &:after{top:-$tooltip_arrow*2; left: 50%; margin-left: -$tooltip_arrow; border-color: transparent transparent $color_white transparent;}
+      &:after{left: 50%; margin-left: -$tooltip_arrow;}
+    }
+
+    &[data-position="left"],
+    &[data-position="right"]{
+      top: 50%;
+      &:after{top: 50%; margin-top: -$tooltip_arrow; }
+    }
+
+
+    //Position specific
+    &[data-position="top"]{
+      &:after{bottom:-$tooltip_arrow*2;}
+    }
+    &[data-position="bottom"]{
+      &:after{top:-$tooltip_arrow*2;}
     }
     &[data-position="left"]{
-      left:0; top: 50%;
-      &:after{right:-$tooltip_arrow*2; top: 50%; margin-top: -$tooltip_arrow; border-color: transparent transparent transparent $color_white;}
+      left:0;
+      &:after{right:-$tooltip_arrow*2;}
     }
     &[data-position="right"]{
-      right:0; top: 50%;
-      &:after{left:-$tooltip_arrow*2; top: 50%; margin-top: -$tooltip_arrow; border-color: transparent $color_white transparent transparent;}
+      right:0;
+      &:after{left:-$tooltip_arrow*2;}
     }
+
+    //Generate default color style
+    @include tooltip_color();
+
   }
-
-
 }
-
 
