--- a/stylish/global/_variables.scss
+++ b/stylish/global/_variables.scss
@@ -173,6 +173,7 @@ $pag_item_current_bg:       $color_flush_mahogany;  //pagination current item bg
 $pag_item_current_text:     $color_white; //pagination current item text color
 
 $tooltip_arrow:             10px;   //Tooltip arrow size
+$tooltip_border:            $color_mercury; //Tooltip background color
 $tooltip_bg:                $color_white; //Tooltip background color
 $tooltip_txt:               $color_mine_shaft; //Tooltip text color
 
