--- a/stylish/global/_forms.scss
+++ b/stylish/global/_forms.scss
@@ -100,8 +100,8 @@ textarea{ height: 150px; padding: 12px}
 
 /* Setup custom select input */
 .select {
-  position: relative;border: 1px solid $input_border;@include border-radius($global_radius);cursor: pointer;background: $input_bg url("../images/select.png") no-repeat;overflow:hidden; background-position: right 10px top 50%; display: block;
-  select {position: relative; cursor:pointer;z-index: 10;background-color: transparent;@include border-radius(0); border:none;max-width: 150%; padding-right: 0}
+  position: relative;border: 1px solid $input_border;height:$input_height;cursor: pointer;background: $input_bg url("../images/select.png") no-repeat;overflow:hidden; background-position: right 10px top 50%; display: block;@include border-radius($global_radius);
+  select {position: absolute; cursor:pointer;z-index: 10;background-color: transparent;@include border-radius(0); border:none; padding-right: 0; width: 100%; height: 100%;left: 0; top: 0;}
   select:focus{outline: none;}
 }
 
