--- a/stylish/global/_mixins.scss
+++ b/stylish/global/_mixins.scss
@@ -259,10 +259,15 @@
 
 
 //Tooltip colors
-@mixin tooltip_color($tip_color:$tooltip_bg, $tip_txt: $tooltip_txt){
-  background: $tip_color; color: $tip_txt;
-  &[data-position="top"]:after{ border-top-color: $tip_color; }
+@mixin tooltip_color($tip_color:$tooltip_bg, $tip_txt: $tooltip_txt, $tip_border: $tooltip_border){
+  background: $tip_color; color: $tip_txt; border: 1px solid $tip_border;
+  &[data-position="top"]:after,{ border-top-color: $tip_color; }
   &[data-position="bottom"]:after{ border-bottom-color: $tip_color; }
   &[data-position="left"]:after{ border-left-color: $tip_color; }
   &[data-position="right"]:after{ border-right-color: $tip_color; }
+
+  &[data-position="top"]:before,{ border-top-color: $tip_border; }
+  &[data-position="bottom"]:before{ border-bottom-color: $tip_border; }
+  &[data-position="left"]:before{ border-left-color: $tip_border; }
+  &[data-position="right"]:before{ border-right-color: $tip_border; }
 }
