--- a/stylish/global/_mixins.scss
+++ b/stylish/global/_mixins.scss
@@ -59,6 +59,7 @@
     src: url('#{$file-path}.eot');
     src: url('#{$file-path}.eot?#iefix') format('embedded-opentype'),
     url('#{$file-path}.svg##{$font-family}') format('svg'),
+    //url('#{$file-path}.woff2') format('woff2'),
     url('#{$file-path}.woff') format('woff'),
     url('#{$file-path}.ttf') format('truetype');
     font-weight: $weight;
@@ -177,16 +178,16 @@
 @mixin btn_color_generator(){
   @each $scheme in $color_schemes {
 
-    $name:  nth($scheme, 1);
-    $color: nth($scheme, 2);
-    $hover: nth($scheme, 3);
+    $name:    nth($scheme, 1);
+    $bg:      nth($scheme, 2);
+    $txt:     nth($scheme, 3);
 
     &.btn_#{$name}{
-      @include btn_color($color, $hover)
+      @include btn_color($bg, $txt)
     }
 
     &.btn_#{$name}_border{
-      @include btn_color(transparent, $color, $color, $color, $hover, $color)
+      @include btn_color(transparent, $bg, $bg, $bg, $txt, $bg)
     }
   }
 }
@@ -270,4 +271,30 @@
   &[data-position="bottom"]:before{ border-bottom-color: $tip_border; }
   &[data-position="left"]:before{ border-left-color: $tip_border; }
   &[data-position="right"]:before{ border-right-color: $tip_border; }
+}
+
+
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
+
+
+//Font style
+@mixin font_style($font_size:false, $line_height:false, $font_weight:false, $font_style:false, $font_family:false){
+
+  @if $font_size{
+    font-size: $font_size;
+  }
+  @if $line_height{
+    line-height: $line_height;
+  }
+  @if $font_weight{
+    font-weight: $font_weight;
+  }
+  @if $font_style{
+    font-style: $font_style;
+  }
+  @if $font_family{
+    font-family: $font_family;
+  }
+
+
 }
