--- a/stylish/components/_paginations.scss
+++ b/stylish/components/_paginations.scss
@@ -4,16 +4,16 @@
 
 .pagination{
   text-align: center;
-  li{
+  >li{
     margin: 0 3px;
-    a, span{
+    >a, >span{
       background-color: $pag_item_bg; color: $pag_item_text; font-size: 14px; padding: 10px 15px; display: block; @include border-radius($global_radius); @include transition-property(color, background-color); @include transition-duration(.3s);
     }
-    a:hover{background-color: darken($pag_item_bg, 8%)}
+    >a:hover{background-color: darken($pag_item_bg, 8%)}
 
     //Active / Current state
     &.current{
-      a, span
+      >a, >span
       { background-color: $pag_item_current_bg; color:$pag_item_current_text}
     }
   }
