--- a/stylish/global/_typography.scss
+++ b/stylish/global/_typography.scss
@@ -11,15 +11,17 @@
 
 
 /* Setup Global Typography */
-body {color:$body_text_color; background:$body_background_color; font-family:$body_font_family; font-size: $p; @include font-smoothing();}
-h1   {font-size:$h1; line-height: $h1+3;}
-h2   {font-size:$h2; line-height: $h2+3;}
-h3   {font-size:$h3; line-height: $h3+3;}
-h4   {font-size:$h4; line-height: $h4+3;}
-h5   {font-size:$h5; line-height: $h5+3;}
-h6   {font-size:$h6; line-height: $h6+3;}
-p, ul li{font-size:$p;line-height:$p+3;}
+body {color:$body_text_color; background:$body_background_color; font-family:$body_font_family; font-size: $p; line-height: $p+$lh; @include font-smoothing();}
+h1   {@include font_style($h1, ($h1+$lh) )}
+h2   {@include font_style($h2, ($h2+$lh) )}
+h3   {@include font_style($h3, ($h3+$lh) )}
+h4   {@include font_style($h4, ($h4+$lh) )}
+h5   {@include font_style($h5, ($h5+$lh) )}
+h6   {@include font_style($h6, ($h6+$lh) )}
+p,
+ul li{@include font_style($p, $p+$lh)}
 a:not(.btn) {@include link_color();}
+
 
 
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
@@ -27,28 +29,48 @@ a:not(.btn) {@include link_color();}
 
 /* Setup content style for large texts */
 .content_style{
-  p{margin-bottom:$content_style_margin; font-size:$p; line-height:$p+3; }
-  ul, ol {overflow: hidden; margin-left:0; margin-bottom: $content_style_margin}
-  li{ margin-bottom: 5px}
-  ul li { margin-left:$content_style_margin+10px;font-size:$p;line-height:$p+3;}
-  ol li { margin-left:$content_style_margin+20px;font-size:$p;line-height:$p+3;}
-  h1,h2,h3,h4,h5,h6{ margin-bottom: 5px; font-weight: bold}
-  h1 {font-size:$h2; line-height: $h2+3;} //h1 is max font size on page, h1 in content style must be smaller than that.
-  h2 {font-size:$h3; line-height: $h3+3;}
-  h3 {font-size:$h4; line-height: $h4+3;}
-  h4 {font-size:$h5; line-height: $h5+3;}
-  h5 {font-size:$h6; line-height: $h6+3;}
-  h6 {font-size:$h6 - 3; line-height: $h6;}
-  address{font-size: $p;line-height: $p+3;}
 
-  img:not(.nores){ width: 100%; height: auto;}
-  iframe:not(.nores){ width: 100%}
+  $cs_plh: ($cs_p+$cs_lh);
+
+  //Headers and paragraph
+  #{headers()}{ margin-bottom: 5px; }
+  h1   {@include font_style($cs_h1, ($cs_h1+$cs_lh) )}
+  h2   {@include font_style($cs_h2, ($cs_h2+$cs_lh) )}
+  h3   {@include font_style($cs_h3, ($cs_h3+$cs_lh) )}
+  h4   {@include font_style($cs_h4, ($cs_h4+$cs_lh) )}
+  h5   {@include font_style($cs_h5, ($cs_h5+$cs_lh) )}
+  h6   {@include font_style($cs_h6, ($cs_h6+$cs_lh) )}
+  p    {@include font_style($cs_p, $cs_plh); margin-bottom:$cs_margin;}
+
+  //Lists
+  ul, ol {
+    overflow: hidden; margin-left:0; margin-bottom: $cs_margin;
+    li{@include font_style($p, $cs_plh); margin-bottom: 5px}
+  }
+  ul li { margin-left:$cs_margin+10px;}
+  ol li { margin-left:$cs_margin+20px;@include font_style($p, $cs_plh)}
+
+  //Common
+  address{@include font_style($p, $cs_plh)}
+  .italic{ font-style: italic}
+  strong,
+  .bold{ font-weight: bold;}
+  .underline{ text-decoration: underline;}
+
+  //Images and iframe
+  img:not(.nores){ width: 100%; height: auto; margin-bottom:$cs_margin; max-width: 100%; }
+  img.alignleft,
+  img.alignright{width: auto;max-width: 100%;}
+  img.rounded{@include border-radius(50%);}
+
+  iframe:not(.nores){ width: 100%; margin-bottom:$cs_margin;max-width: 100%; }
 
   img,
   iframe{
-    .alignleft {clear: left;float: left;margin: 0 $content_style_margin $content_style_margin 0;}
-    .alignright {clear: right;float: right;margin: 0 0 $content_style_margin $content_style_margin;}
+    &.alignleft {clear: left;float: left;margin: 0 $cs_margin $cs_margin 0;}
+    &.alignright {clear: right;float: right;margin: 0 0 $cs_margin $cs_margin;}
   }
+
 }
 
 
