--- a/stylish/global/_variables.scss
+++ b/stylish/global/_variables.scss
@@ -55,6 +55,15 @@ $button_background_color: $color_havelock_blue;
 $button_text_color:       $color_white;
 
 
+//Common
+$global_radius:           4px; //Setup global border radius (buttons, forms and etc.)
+
+
+//Icons
+$icons_font_family:       'stylish';
+$icons_font_location:     '../fonts/stylish';
+
+
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
@@ -63,20 +72,30 @@ $body_font_family:        Arial, Helvetica, sans-serif; //body font family
 $body_background_color:   $color_white;  //body bg color
 $body_text_color:         $color_mine_shaft;  //body text color
 
-$h1:  38px; //H1 size
-$h2:  35px; //H2 size
-$h3:  32px; //H3 size
-$h4:  29px; //H4 size
-$h5:  26px; //H5 size
-$h6:  23px; //H6 size
-$p:   20px; //P size
+//Global Headers and paragraph
+$h1:  38px;
+$h2:  35px;
+$h3:  32px;
+$h4:  29px;
+$h5:  26px;
+$h6:  23px;
+$p:   20px;
+$lh:  5; //number added up to headers and paragraph to setup line height
 
-$content_style_margin:    20px; //content style margin move for p, ul, img and other
+
+//Headers and paragraph in content_style continer
+$cs_h1:  38px;
+$cs_h2:  35px;
+$cs_h3:  32px;
+$cs_h4:  29px;
+$cs_h5:  26px;
+$cs_h6:  23px;
+$cs_p:   20px;
+$cs_lh:  5; //number added up to headers and paragraph to setup line height in content style
 
 
-//Icons
-$icons_font_family:       'stylish';
-$icons_font_location:     '../fonts/stylish';
+$cs_margin:    20px; //content style margin move for p, ul, img and other
+
 
 
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
@@ -145,7 +164,6 @@ $btn_padding:         10px; //Button Default padding size
 $btn_txt_size:        14px; //Button Default text size
 
 $form_error:          $color_flush_mahogany;  //form error color
-
 $form_field_move:     20px; //Default form field move
 
 
@@ -153,8 +171,6 @@ $form_field_move:     20px; //Default form field move
 
 
 // Components
-$global_radius:             4px; //Setup global border radius (buttons, forms and etc.)
-
 $accordion_head_color:      $color_silver; //accordion header bg color
 $accordion_content_color:   $color_mercury; //accordion content bg color
 
